--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "google-spreadsheet": "^5.0.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "sqlite3": "^5.1.7",
+    "uuid": "^13.0.0"
   }
 }
